# sml

./: Cargo.toml  LICENSE  README.md
examples/: parsing_repl.rs
samples/: empty_function.sml  illegal_character.sml  invalid_integers.sml  invalid_strings.sml  tokens.sml
sml/: Cargo.toml
sml-macros/: Cargo.toml
sml-macros/src/: lib.rs  token.rs  token_kind.rs  token_type.rs
sml/examples/: parsing_repl_expression.rs  parsing_repl_statement.rs
sml/src/: diagnostic.rs  lib.rs  main.rs
sml/src/_diagnostics/: diagnostic.rs  diagnostic_list.rs
sml/src/_diagnostics/kind/: lexer_diagnostic_kind.rs  parser_diagnostic_kind.rs
sml/src/diagnostic/: lexer.rs  parser.rs  severity.rs
sml/src/diagnostics/: diagnostic.rs  kind.rs  list.rs  mod.rs  severity.rs
sml/src/diagnostics/kind/: lexer.rs  parser.rs
sml/src/lexing/: lexer.rs  mod.rs  token.rs  token_kind.rs  token_span.rs
sml/src/parsing/: associativity.rs  expression.rs  fakable.rs  literal.rs  mod.rs  operator.rs  operator_priority.rs  parser.rs  parser_ast.rs  statement.rs
src/: lib.rs  main.rs
src/diagnostics/: diagnostic.rs  diagnostic_list.rs  kind.rs  mod.rs  severity.rs
src/diagnostics/kind/: lexer_diagnostic_kind.rs  parser_diagnostic_kind.rs
src/lexing/: cursor.rs  lexer.rs  location.rs  mod.rs  token.rs  token_discr.rs  token_kind.rs  token_span.rs
src/parsing/: expression.rs  mod.rs  operator.rs  parser.rs  parser_ast.rs  priority.rs  statement.rs
