[package]
name = "sml-macros"
version = "0.1.0"
edition = "2021"
authors = [ "catapillie <espritox@gmail.com>", "paokito <paokito.takasu@gmail.com" ]
description = "The Super Mega Language !!!"
repository = "https://github.com/catapillie/sml"

[lib]
proc-macro = true

[dependencies]
convert_case = "0.6.0"
proc-macro2 = "1.0.51"
quote = "1.0.23"
syn = "1.0.109"
